--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,142 @@
-/contracts
+# Dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Hardhat
+cache/
+artifacts/
+typechain/
+typechain-types/
+
+# Foundry
+out/
+cache/
+broadcast/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Gatsby files
+.cache/
+public
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Temporary folders
+tmp/
+temp/
+
+# Solidity specific
+*.sol.js
+*.sol.ts
+
+# Deployment files
+deployments/
+
+# Gas reports
+gas-report.txt
+
+# Local Hardhat node
+hardhat-deployments/
+
+# OpenZeppelin
+.openzeppelin/
+
+# ABI files (if you want to ignore them)
+*.abi
+
+# Contract verification files
+.flattened/
+
+# Test files (if you want to ignore them)
+test-results/
+coverage.json
+
+# Slither analysis
+slither.db
+
+# Mythril analysis
+mythril.log
+
+# Echidna
+echidna-corpus/
+echidna-coverage/
+
+# Custom project files
+.states/ 
